--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spectrum War</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <section>
         <div class="top">
-            <img id="link-logo" src="/assets/img/link.png" alt="IEEE LINK">
+            <img id="link-logo" src="assets/img/link.png" alt="IEEE LINK">
             <span id="user_name">User Name</span>
         </div>
         <div class="heading">
@@ -79,7 +79,7 @@
             <h3 id="x"></h3>
         </div>  
     </section>
-    <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/script1.js"></script>
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script1.js"></script>
 </body>
 </html>
