--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             </div>
             
         </footer>
+        <div>
+            <h3 id="x"></h3>
+        </div>  
     </section>
     <script src="./assets/js/script.js"></script>
 </body>
